<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="@color/text_icons"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describtion"
            android:textColor="@color/text_icons"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <Button
                android:id="@+id/learnmore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/buttonbackground"
                android:text="@string/learnMore"
                android:textColor="@color/text_icons"
                android:textSize="12sp" />

            <Button
                android:id="@+id/freeTrial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/buttonbackground"
                android:text="@string/free_trial"
                android:textColor="@color/text_icons" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyMember"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18sp"
            android:background="@drawable/buttonbackground"
            android:text="@string/login"
            android:id="@+id/login"
            android:textColor="@color/text_icons" />


    </LinearLayout>
</LinearLayout>